@@ -105,6 +105,9 @@ Release 0.9.0 - unreleased
     (Hyoungjun Kim via hyunsik)
 
   BUG FIXES
+
+    TAJO-949: PullServer does not release files, when a channel throws 
+    an internal exception. (jinho)
     
     TAJO-975: alias name which is the same to existing column name may cause
     NPE during PPD. (hyunsik)
